# library-finder

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/: .env.local  .env.stage  config.py  elastic.py  main.py  message.py  search.py
src/nosql/storage/: client.py  storage.py
src/schemas/: base.py  message.py  search_result.py
