[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruzek",email = "reek867@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "faststream[rabbit] (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
