[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruzek",email = "reek867@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "faststream[rabbit] (>=0.6.3,<0.7.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "elasticsearch[async] (>=9.2.0,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)"
]
